--- a/css/birthday.css
+++ b/css/birthday.css
@@ -168,6 +168,40 @@ footer {
   z-index: 1;
 }
 
+.container-timer {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+
+}
+
+.container-timer .box {
+  text-align: center;
+
+}
+
+.container-timer .box .flip {
+  background: linear-gradient(#fcfcfc, #f8bfff);
+  border-radius: 15px;
+  width: 100px;
+  height: 120px;
+  font-size: 50px;
+  font-weight: bold;
+  line-height: 120px;
+  box-shadow: inset 0 -5px 10px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.container-timer .box .flip::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: rgba(0,0,0,0.2);
+}
+
 @media (max-width: 900px) {
   header {
     flex-direction: column;
@@ -200,5 +234,22 @@ footer {
     width: 100%;
     max-width: 300px;
     margin-bottom: 20px;
+  }
+
+  .container-timer .box .flip {
+    width: 50px;
+    height: 50px;
+    font-size: 25px;
+    line-height: 50px;
+  }
+  .container-timer .box span {
+    font-size: 12px;
+    margin-top: 5px;
+    text-align: center;
+  }
+  .container-timer .box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
