--- a/css/birthday.css
+++ b/css/birthday.css
@@ -10,6 +10,21 @@ body {
   color: #333;
 }
 
+@font-face {
+  font-family: "Bodoni";
+  src: url(../../fonts/Bodoni/BodoniAntiquaURWLightRegular.ttf);
+}
+
+@font-face {
+  font-family: "Moon-dance";
+  src: url(../../fonts/Moon_Dance/MoonDance-Regular.ttf);
+}
+
+@font-face {
+  font-family: "Dido";
+  src: url(../../fonts/Dido/DidotLTPro-Roman.ttf);
+}
+
 /* HEADER */
 header {
   display: flex;
@@ -20,15 +35,32 @@ header {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
 }
 
+h1.header-h1 {
+  font-family: "Bodoni";
+  font-size: 36px;
+  letter-spacing: 4px;
+  color: #f39bdc;
+}
+
+h2.header-h2 {
+  font-family: "Moon-dance";
+  font-size: 42px;
+  letter-spacing: 8px;
+  color: #544233;
+}
+
+h3.header-h3 {
+  margin-top: 20px;
+  font-family: "Dido";
+  font-size: 24px;
+  color: #cca2a6;
+}
+
 header img {
   width: 110px;
 }
 
-.logo {
-  font-weight: 700;
-  font-size: 24px;
-  color: #ff6fa5;
-}
+/* Navegación */
 
 nav a {
   margin-left: 20px;
@@ -41,9 +73,67 @@ nav a:hover {
   color: #ff6fa5;
 }
 
+/* Sección de Inicio */
+section#inicio-micaela {
+  height: 700px;
+  background: linear-gradient(270deg, #ffd6e8, #fff) !important;
+  background-image: url(/assets/images/header-background.png);
+  background-repeat: no-repeat;
+  background-size: 45% auto;
+  background-position: 115%;
+  display: flex;
+  align-items: center;
+}
+
+.row-header-info {
+  height: 500px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 50px;
+}
+
+.columna-1-header {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.columna-2-header {
+  margin-top: 20px;
+  width: 30%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+}
+
+.columna-2-header img {
+  width: 90%;
+  transform: rotate(-5deg);
+}
+
+img.love_float {
+  position: absolute;
+  width: 60px;
+  bottom: -7%;
+  left: -5%;
+}
+
+img.paw_float {
+  position: absolute;
+  width: 60px;
+  bottom: 0%;
+  right: 0%;
+}
+
 /* HERO */
 .hero {
-  background: linear-gradient(135deg, #ffd6e8, #fff);
+  background: linear-gradient(180deg, #ffffff, #fac4ff);
   padding: 80px 20px;
   text-align: center;
 }
@@ -71,7 +161,7 @@ nav a:hover {
 
 /* Cuenta Regresiva */
 .contador {
-  background: linear-gradient(135deg, #ffd6e8, #fff);
+  background: linear-gradient(0deg, #ffd6e8, #fff);
   padding: 80px 20px;
   text-align: center;
 }
@@ -199,15 +289,18 @@ footer {
   left: 0;
   width: 100%;
   height: 2px;
-  background: rgba(0,0,0,0.2);
+  background: rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 900px) {
+
+  /* HEADER */
   header {
     flex-direction: column;
     text-align: center;
   }
 
+  /* Navegación */
   nav {
     display: flex;
     flex-direction: column;
@@ -220,6 +313,48 @@ footer {
     padding: 8px 15px;
   }
 
+  /* Sección de Inicio */
+  section#inicio-micaela {
+    height: auto;
+    background-size: 100% auto;
+    background-position: right;
+  }
+
+  h1.header-h1 {
+    font-size: 25px;
+    margin-bottom: 10px;
+  }
+
+  h2.header-h2 {
+    font-size: 18px;
+    margin-top: 5px;
+  }
+
+  h3.header-h3 {
+    font-size: 15px;
+    font-weight: 100;
+  }
+
+  h3.header-h3 p {
+    margin-top: 5px;
+  }
+
+  .row-header-info {
+    flex-direction: column;
+    width: 90%;
+    height: auto;
+  }
+
+  .columna-1-header,
+  .columna-2-header {
+    width: 100%;
+  }
+
+  .columna-2-header {
+    margin-top: 40px;
+  }
+
+  /* Sección de Cuenta Regresiva */
   .contador {
     padding: 20px;
     position: relative;
@@ -242,14 +377,18 @@ footer {
     font-size: 25px;
     line-height: 50px;
   }
+
   .container-timer .box span {
     font-size: 12px;
     margin-top: 5px;
     text-align: center;
   }
-  .container-timer .box{
+
+  .container-timer .box {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+
+
 }
